<resources>

    <string name="app_name">ReadBookNote</string>
    <string name="user_name">用户名</string>
    <string name="user_introduce">简介</string>
    <string name="reader_head_note">笔记</string>
    <string name="reader_head_read">读书</string>
	<string name="reader_head_share">分享</string>
	
	<string name="attention_friend_list">关注</string>
	<string name="attention_me_list">粉丝</string>
	
	<string name="has_read">已读</string>
	<string name="want_read">想读</string>
	<string name="share">分享</string>
	<string name="my_book_store">书屋</string>
	<string name="search">search</string>
	
	<string name="button_sure">确定</string>
	<string name="button_cancle">取消</string>
	
	<string name="dialog_from_camera">拍一张</string>
	<string name="dialog_from_photo">相册上选一张</string>
	<string name="all_picture">所有图片</string>
</resources>
