<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    <TextView 
        android:id="@+id/tv_me_patition_readed"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/me_info_layout_partition_select"
        android:text="@string/has_read"
        android:textSize="20sp"
        />
    
    <TextView 
        android:layout_width="1dip"
        android:layout_height="wrap_content"
        android:background="@color/select_color"
        android:layout_gravity="center_vertical"
        />
    
    <TextView 
        android:id="@+id/tv_me_patition_wanted_read"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/me_info_layout_partition_select"
        android:text="@string/want_read"
        android:textSize="20sp"
        />
    
    <TextView 
        android:layout_width="1dip"
        android:layout_height="wrap_content"
        android:background="@color/select_color"
        android:layout_gravity="center_vertical"
        />
    
    <TextView 
        android:id="@+id/tv_me_patition_share"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/me_info_layout_partition_select"
        android:text="@string/share"
        android:textSize="20sp"
        />
    
    <TextView 
        android:layout_width="1dip"
        android:layout_height="wrap_content"
        android:background="@color/select_color"
        android:layout_gravity="center_vertical"
        />
    
    <TextView 
        android:id="@+id/tv_me_patition_create_book_shore"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/me_info_layout_partition_select"
        android:text="@string/my_book_store"
        android:textSize="20sp"
        />
    </LinearLayout>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/select_color"
        />
</LinearLayout>
