<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_reader_head_read"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reader_head_read"
            android:textColor="@color/select_color" />

        <TextView
            android:id="@+id/tv_reader_head_note"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reader_head_note" />

        <TextView
            android:id="@+id/tv_reader_head_share"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reader_head_share" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
         <TextView
             android:id="@+id/tv_reader_head_line1"
            android:layout_width="0dip"
            android:layout_height="3dip"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/select_color" />
        
        <TextView
            android:id="@+id/tv_reader_head_line2"
            android:layout_width="0dip"
            android:layout_height="3dip"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/tv_reader_head_line3"
            android:layout_width="0dip"
            android:layout_height="3dip"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:color/transparent" />

    </LinearLayout>

</LinearLayout>
